# eso4clima-wp1-prototype

./: CITATION.cff  README.md  mkdocs.yml  pyproject.toml  utils.py
.github/workflows/: build.yml
docs/: code_math_description.md  examples.md  index.md
docs/api/: st_encoder_decoder.md  utils.md
notebooks/: data_vis.ipynb  example.ipynb
src/: dataset.py  st_encoder_decoder.py
tests/: test_dataset.py
